# django-photologue

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  6.0.0  AGENTS.md  CHANGELOG.txt  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  README.txt  RELEASE_NOTES.txt  SECURITY.md  admin.py  dev-requirements.txt  models.py  pl-admin.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  test_settings.py  tox.ini  urls.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
.tx/: config
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/essentials/: contributing.rst  installation.rst
docs/misc/: examples_and_forks.rst
docs/pages/: changelog_page.rst  contributing.rst  customising.rst  installation.rst  usage.rst
example_project/: .coveragerc  README.rst  manage.py  requirements.txt
example_project/example_project/: celery.py  settings.py  settings_s3boto.py  urls.py  wsgi.py
photologue/: LICENSE.txt  README.txt  __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  pl-admin.py  processors.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
photologue/fixtures/: initial_data.xml
photologue/management/: __init__.py
photologue/migrations/: 0001_initial.py  0002_auto__add_field_photo_order.py  0002_auto__chg_field_gallery_title__chg_field_galleryupload_title__chg_fiel.py  0002_gallery.py  0002_photosize_data.py  0003_auto_20140822_1716.py  0003_galleryupload_photosize.py  0003_order.py  0004_auto_20140915_1259.py  0004_initial_photosizes.py  0004_photosize_data.py  0005_auto_20141027_1552.py  0005_auto_28.py  0005_sorted_m2m.py  0006_auto_20141028_2005.py  0006_data_28.py  0006_m2morder.py  (+16 more)
release/: __init__.py  releaser_hooks.py  requirements-release.txt
scripts/: release_dispatch.py  releaser_hooks.py  run_tests.py
templates/: gallery_archive.html  gallery_archive_day.html  gallery_archive_month.html  gallery_detail.html  gallery_list.html  photo_archive_month.html  photo_archive_year.html  photo_detail.html  photo_list.html
(+152 files in other folders)
